--- a/demo_1.ipynb
+++ b/demo_1.ipynb
@@ -6,7 +6,6 @@
       "name": "demo 1.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrd7iGc7BcWZGDmSQPRnhN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,19 +34,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gPc1UWQcfBbx",
-        "outputId": "6bd40719-25cb-4ae8-d3d6-32d965f07332"
+        "outputId": "005a966b-fdd1-4120-d8a7-eef38b38395f"
       },
       "source": [
         "x = \"sally\"\n",
         "print(x)"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "allen\n"
+            "sally\n"
           ]
         }
       ]
@@ -59,39 +58,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o-3YoW6Ph9Eq",
-        "outputId": "7a98bf16-a866-45e3-eac6-9f695f955aec"
+        "outputId": "229d25e9-8fad-447f-fe95-58f4cca46021"
       },
       "source": [
         "a = b = c = 1\n",
-        "print(a)"
+        "print(a,b,c)"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n"
+            "1 1 1\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9O60e21Rg56X"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "erT5XyWmjYqx"
-      },
-      "source": [
-        ""
       ]
     },
     {
@@ -107,7 +88,7 @@
         "x =  \"enjoying\"\n",
         "print(x+\" \"\"my life\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +114,7 @@
         "print(x-y)\n",
         "print(x+y)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,6 +123,34 @@
             "-5\n",
             "35\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MG4InGBnstHu",
+        "outputId": "593ea15a-3780-404f-b55a-d0861478bb32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "x = 15\n",
+        "y = 20\n",
+        "x>y and x==x"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     }
